--- a/7._website_flexbox/edgeledger_website/css/style.css
+++ b/7._website_flexbox/edgeledger_website/css/style.css
@@ -53,6 +53,7 @@ img {
 
 .navbar.top {
     background: transparent;
+    
 }
 
 .navbar a {
@@ -177,6 +178,31 @@ img {
     padding: 12px 0;
     margin-top: 20px;
 }
+
+/* Post */
+
+.post {
+    padding: 50px 30px;
+}
+
+.post h2 {
+    font-size: 40px;
+    margin-bottom: 20px;
+    padding-bottom: 10px;
+    border-bottom: #ccc solid 1px;
+}
+
+.post .meta {
+    margin-bottom: 30px;
+}
+
+.post img {
+    width: 300px;
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto 30px;
+}
+
 
 /* Footer */
 .footer {
